# HueKcbPro

./: .gitignore  README.md  README.zh-CN.md  pubspec.yaml
backend_v2/: .dockerignore  .env  .env.example  .env.release.example  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.release.yml  docker-compose.yml  pyproject.toml
backend_v2/alembic/: env.py
backend_v2/alembic/versions/: 20260404_0001_init_tables.py  20260516_0002_add_monitoring_tables.py
backend_v2/app/: __init__.py  main.py
backend_v2/app/core/: db.py  security.py  settings.py
backend_v2/app/middleware/: conditional_gzip.py  error_handler.py  request_id.py
backend_v2/app/models/: __init__.py  academic_binding.py  android_release.py  base.py  encrypted_credential.py  refresh_token.py  request_log.py  schedule_snapshot.py  schedule_sync_state.py  user.py  user_client_info.py
backend_v2/app/modules/auth/: router.py  (+2 more)
backend_v2/site/: admin.html  index.html
backend_v2/site/content/: readme.md  readme.zh-CN.md
backend_v2/site/css/: admin.css  style.css
backend_v2/site/js/: admin.js  app.js  i18n.js  strings.js
backend_v2/site/tests/: admin_monitor.test.mjs  hero_style.test.mjs
backend_v2/tests/: conftest.py  test_admin_monitoring.py  test_auth_api.py  test_binding_refresh_integration.py  test_celery_registration.py  test_health.py  test_hue_connector.py  test_login_schedule_integration.py  test_models.py  test_runtime_stack.py  test_schedule_api.py  test_schedule_cache_integration.py  test_schedule_service.py  test_schedule_tasks.py  test_stack_config.py  test_updates_api.py
(+132 files in other folders)
